updated whitelisting class and instances

--- a/sonar_custom_java_whitelist.yaml
+++ b/sonar_custom_java_whitelist.yaml
@@ -1,11 +1,9 @@
 whiteListVariables:
     -   whiteClass: EmployeeService
-        whiteVariables: myDesiredVariable,myJObj
+        whiteVariables: myDesiredVariable
     -   whiteClass: Employee
         whiteVariables: name
     -   whiteClass: EmployeeAutowiredByConstructorService
         whiteVariables: employee
-
-        
-
-
+whiteListClass: Employee
+whiteListInstance: Integer
