Added default variables list

--- a/sonar_custom_java_allowed_objects.yaml
+++ b/sonar_custom_java_allowed_objects.yaml
@@ -7,3 +7,4 @@ allowedClassVariables:
         variables: employee
 allowedClass: Employee
 allowedInstance: Integer,Logger
+defaultVariables: mycommon,mycommon1
